--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>H\T | AI Automations</title>
+    <meta name="description" content="Placeholder for a concise page description that will appear in search engine results.">
+    <meta name="keywords" content="keyword1, keyword2, keyword3">
+    <meta name="author" content="Placeholder Author">
+    <meta property="og:title" content="Placeholder Title">
+    <meta property="og:description" content="Placeholder for a concise description for social media sharing.">
+    <meta property="og:image" content="https://example.com/placeholder-image.jpg">
+    <meta property="og:url" content="https://example.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Placeholder Title">
+    <meta name="twitter:description" content="Placeholder for a concise description for Twitter.">
+    <meta name="twitter:image" content="https://example.com/placeholder-image.jpg">
   </head>
   <body>
     <div id="root"></div>
