--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>H\T | AI Automations</title>
     <meta name="description" content="Placeholder for a concise page description that will appear in search engine results.">
-    <meta name="keywords" content="keyword1, keyword2, keyword3">
-    <meta name="author" content="Placeholder Author">
-    <meta property="og:title" content="Placeholder Title">
+    <meta name="keywords" content="AI Automations, AI Real Estate, AI Phoenix">
+    <meta name="author" content="Honu\ai">
+    <meta property="og:title" content="Honu\ai | AI AUtomations">
     <meta property="og:description" content="Placeholder for a concise description for social media sharing.">
-    <meta property="og:image" content="https://example.com/placeholder-image.jpg">
-    <meta property="og:url" content="https://example.com">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Placeholder Title">
+    <meta property="og:image" content="https://github.com/TheHusband/HonuAI/blob/main/public/SEO.png">
+    <meta property="og:url" content="https://honuai.tech">
+    <meta name="twitter:card" content="Honu\ai | AI Automations">
+    <meta name="twitter:title" content="Honu\ai">
     <meta name="twitter:description" content="Placeholder for a concise description for Twitter.">
-    <meta name="twitter:image" content="https://example.com/placeholder-image.jpg">
+    <meta name="twitter:image" content="https://github.com/TheHusband/HonuAI/blob/main/public/SEO.png">
   </head>
   <body>
     <div id="root"></div>
