--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>H\T | AI Automations</title>
     <meta name="description" content="Placeholder for a concise page description that will appear in search engine results.">
-    <meta name="keywords" content="AI Automations, AI Real Estate, AI Phoenix">
+    <meta name="keywords" content="AI Automations, AI Real Estate, AI Phoenix, AI Real Estate Arizona, AI Arizona, AI Real Estate Investing, AI Real Estate Analisys">
     <meta name="author" content="Honu\ai">
     <meta property="og:title" content="Honu\ai | AI AUtomations">
     <meta property="og:description" content="Placeholder for a concise description for social media sharing.">
