--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Placeholder for a concise page description that will appear in search engine results.">
     <meta name="keywords" content="AI Automations, AI Real Estate, AI Phoenix, AI Real Estate Arizona, AI Arizona, AI Real Estate Investing, AI Real Estate Analisys">
     <meta name="author" content="Honu\ai">
-    <meta property="og:title" content="Honu\ai | AI AUtomations">
+    <meta property="og:title" content="Honu\ai | AI Automations">
     <meta property="og:description" content="Placeholder for a concise description for social media sharing.">
     <meta property="og:image" content="https://github.com/TheHusband/HonuAI/blob/main/public/SEO.png">
     <meta property="og:url" content="https://honuai.tech">
