--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="author" content="Honu\ai">
     <meta property="og:title" content="Honu\ai | AI Automations">
     <meta property="og:description" content="Placeholder for a concise description for social media sharing.">
-    <meta property="og:image" content="https://github.com/TheHusband/HonuAI/blob/main/public/SEO.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/TheHusband/HonuAI/r">
     <meta property="og:url" content="https://honuai.tech">
     <meta name="twitter:card" content="Honu\ai | AI Automations">
     <meta name="twitter:title" content="Honu\ai">
     <meta name="twitter:description" content="Placeholder for a concise description for Twitter.">
-    <meta name="twitter:image" content="https://github.com/TheHusband/HonuAI/blob/main/public/SEO.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/TheHusband/HonuAI/r">
   </head>
   <body>
     <div id="root"></div>
