--- a/index.html
+++ b/index.html
@@ -1,21 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <!-- Essential Meta Tags -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>H\T | AI Automations</title>
-    <meta name="description" content="Placeholder for a concise page description that will appear in search engine results.">
-    <meta name="keywords" content="AI Automations, AI Real Estate, AI Phoenix, AI Real Estate Arizona, AI Arizona, AI Real Estate Investing, AI Real Estate Analisys">
-    <meta name="author" content="Honu\ai">
-    <meta property="og:title" content="Honu\ai | AI Automations">
-    <meta property="og:description" content="Placeholder for a concise description for social media sharing.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/TheHusband/HonuAI/r">
-    <meta property="og:url" content="https://honuai.tech">
-    <meta name="twitter:card" content="Honu\ai | AI Automations">
-    <meta name="twitter:title" content="Honu\ai">
-    <meta name="twitter:description" content="Placeholder for a concise description for Twitter.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/TheHusband/HonuAI/r">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Title -->
+    <title>Honu\ai - AI Automation & Consulting</title>
+
+    <!-- Meta Description -->
+    <meta 
+      name="description" 
+      content="Honu\ai specializes in AI automation and AI consulting, providing innovative solutions to optimize operations, streamline workflows, and enhance business efficiency." 
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
+
+    <!-- Open Graph (OG) Meta Tags for Social Media -->
+    <meta property="og:title" content="Honu\ai - AI Automation & Consulting for Real Estate" />
+    <meta 
+      property="og:description" 
+      content="Explore Honu\ai's expertise in AI-powered solutions for YOU and Your business. We help businesses enhance efficiency, reduce costs, and stay ahead in a competitive market." 
+    />
+    <meta property="og:image" content="/assets/SEO.png" />
+    <meta property="og:url" content="https://www.honuai.tech/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Honu\ai - AI Automation & Consulting" />
+    <meta 
+      name="twitter:description" 
+      content="Honu\ai provides tailored AI automation and AI consulting services to optimize operations and enhance customer engagement." 
+    />
+    <meta name="twitter:image" content="/assets/SEO.png" />
+
+    <!-- Keywords for SEO -->
+    <meta 
+      name="keywords" 
+      content="AI automation, real estate automation, AI consulting, property management AI, real estate technology, business AI solutions, Honuai, honu\ai, AI Phoenix, AI Phoeniz AZ, AI Phoenix Arizona, AI Arizona, Artificial Inteligence Real Estate, Artificial Inteligence Phoenix" 
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Honu\ai Team" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.honuai.tech/" />
   </head>
   <body>
     <div id="root"></div>
