--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Meta Description -->
     <meta 
       name="description" 
-      content="Honu\ai specializes in AI automation and AI consulting, providing innovative solutions to optimize operations, streamline workflows, and enhance business efficiency." 
+      content="Honu\ai specializes in AI automation and AI consulting in the Real Estate industry, providing innovative solutions to optimize operations, streamline workflows, and enhance business efficiency." 
     />
 
     <!-- Favicon -->
@@ -50,7 +50,7 @@
     <!-- Keywords for SEO -->
     <meta 
       name="keywords" 
-      content="AI automation, real estate automation, AI consulting, property management AI, real estate technology, business AI solutions, Honuai, honu\ai, AI Phoenix, AI Phoeniz AZ, AI Phoenix Arizona, AI Arizona, Artificial Inteligence Real Estate, Artificial Inteligence Phoenix" 
+      content="AI automation, Real Estate Investing AI, AI for Real Estate, AI CRE, AI RE, real estate automation, AI consulting Real Estate, property management AI, real estate technology, business AI solutions, Honuai, honu\ai, AI Phoenix, AI Phoenix AZ, AI Phoenix Arizona, AI Arizona, Artificial Intelligence Real Estate, Artificial Intelligence Phoenix" 
     />
 
     <!-- Author -->
