--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.honuai.tech/" />
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
